--- a/lake_styles_txt.css
+++ b/lake_styles_txt.css
@@ -4,8 +4,8 @@
    Case Problem 4
    
    Great Lakescape Lodge Style Sheet
-   Author: 
-   Date:   
+   Author: Rose A
+   Date:   9-13-19
    
    Filename: lake_styles.css
 
